# IRIENX-CODE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODING_STANDARD.md  Cargo.toml  LICENSE  PRTEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  _404.md  _coverpage.md  _navbar.md  build.sh  config.yml  index.html  index.md  quickstart.md  setup.sh  startup.py
.github/: FUNDING.yml
config/: config.yml  hotkey-faye.yml  hotkey-lain.yml  theme-lain-dark.yml  theme-lain-light.yml
inc/: README.md
lain-core/: README.md
lain-core/lib-core/: Cargo.toml
lib/: CMakeLists.txt  libcc.so.0.1  outPrint.cpp
lib-core/: Cargo.toml
lib-core/src/: lib.rs  test.rs
lib-utils/: Cargo.toml
lib-utils/src/: lib.rs
lib/cc/: CMakeLists.txt
lib/cc/src/: CMakeLists.txt  main.c
plugins/: Cargo.toml
plugins/src/: lib.rs  test.rs
res/: README.md
src/: Cargo.toml  main.cpp  main.py  main.rs  ui.py
src/faye_core/: Cargo.toml
src/faye_core/src/: lib.rs
src/faye_init/: Cargo.toml
src/faye_init/src/: init.rs  main.rs
src/faye_lsp/: Cargo.toml
src/faye_lsp/src/: lib.rs
src/faye_plugins/: Cargo.toml
src/faye_plugins/src/: lib.rs
src/faye_utils/: Cargo.toml
src/faye_utils/src/: version.rs
src/kern/: Cargo.toml
src/kern/src/: lib.rs
src/lc_core/: Cargo.toml
src/lc_core/src/: lib.rs
src/lsp/: Cargo.toml
src/lsp/src/: lib.rs
src/plug/: Cargo.toml
src/plug/src/: lib.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs  version.rs
themes/: ared.css
ui/: README.md  ui_main.py
utils/: Cargo.toml
utils/src/: lib.rs
