CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(irienx-code)
#涉及及项目名字的变量名皆以缩写称
SET(CMAKE_CXX_FLAGS_RELEASE)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_INSTALL_PREFIX /usr/share/irisoulenx/irienx-code)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
INCLUDE_DIRECTORIES(inc)
AUX_SOURCE_DIRECTORY(src SRCS_DIR)
SET(ic ${SRCS_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} ${ic})
ADD_SUBDIRECTORY(lib)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ic-libs)

# RPM信息
SET(CPACK_GENERATOR "RPM")
SET(CPACK_PACKAGE_NAME "irienx-code")
SET(CPACK_PACKAGE_CONTACT "support@irisoulenx.com") 
SET(CPACK_INSTALL_PREFIX "/usr/share/irisoulenx/irienx-code")
SET(CPACK_PACKAGE_VENDOR "irisoulenx productions")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "2")
SET(CPACK_PACKAGE_RELEASE 3)
SET(CPACK_RPM_PACKAGE_GROUP "irienx")
SET(CPACK_RPM_PACKAGE_URL "https//irisoulenx.github.io")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "The best IDE")
SET(CPACK_RPM_PACKAGE_DESCRIPTION "The best IDE")
SET(CPACK_RPM_PACKAGE_LICENSE "GPL-3.0")
INCLUDE(CPack)