[package]
name = "lain-code"
version = "0.1.0"
license = "MIT"
authors = ["Siegfried Wu <howiewoo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-core = { path = "lib-core",version = "0.1.0"}
lib-utils = { path = "lib-utils",version = "0.1.0"}

[workspace]
members = [
    "lib-core",
    "lib-utils"
]
