[package]
name = "faye-text"
version = "0.1.0"
license = "MIT"
authors = ["Siegfried Wu <howiewoo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom module
kern = { path = "./src/kern",version = "0.1.0" }
lsp = { path = "./src/lsp",version = "0.1.0" }
plugins = { path = "./plugins",version = "0.1.0" }
utils = { path = "./utils",version = "0.1.0" }

[[bin]]
name="fate"
path="./src/main.rs" 

[workspace]
members = [
    "src/kern",
    "src/lsp",
    "plugins",
    "utils"
]
