[package]
name = "faye-text"
version = "0.1.0"
license = "MIT"
authors = ["Siegfried Wu <howiewoo@outlook.com>"]
edition = "2018"

[dependencies]
kern = { path = "./src/kern",version = "0.1.0" }
lsp = { path = "./src/lsp",version = "0.1.0" }

[[bin]]
name="fate"
path="./src/main.rs" 

[workspace]
members = [
    "src/kern",
    "src/lsp"
]
